--- a/client.html
+++ b/client.html
@@ -10,6 +10,12 @@
             margin-bottom: 10px;
             padding: 10px;
         }
+        #messageInput {
+            width: 100%;
+            height: 60px;
+            margin-bottom: 10px;
+            resize: vertical;
+        }
         .received {
             color: blue;
         }
@@ -20,7 +26,7 @@
 </head>
 <body>
     <div id="messages"></div>
-    <input type="text" id="messageInput" placeholder="输入消息">
+    <textarea id="messageInput" placeholder="输入消息 (按Ctrl+Enter或⌘+Enter发送)"></textarea>
     <button onclick="sendMessage()">发送</button>
     <div id="status"></div>
 
@@ -68,9 +74,10 @@
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         }
 
-        // 支持按回车键发送消息
-        messageInput.addEventListener('keypress', function(e) {
-            if (e.key === 'Enter') {
+        // 修改按键事件处理
+        messageInput.addEventListener('keydown', function(e) {
+            if (e.key === 'Enter' && (e.ctrlKey || e.metaKey)) {
+                e.preventDefault();
                 sendMessage();
             }
         });
